--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.1.0 # เช็คเวอร์ชันล่าสุดได้ที่ pub.dev
   http: ^1.5.0
 
   # The following adds the Cupertino Icons font to your application.
